<?xml version="1.0"?>
<package format="2">
  <name>robosys task2</name>
  <version>0.0.0</version>
  <description>The robosys task2 package</description>

  <maintainer email="s16c1010qv@s.chibakoudai.jp">Takuya Ishizaki</maintainer>

  <license>GPLv3</license>


  <url type="website">https://github.com/takuyaishizaki/robosys_task2</url>
  <url type="website">https://youtu.be/p6K9C5QUyWo</url>

  <author email="s16c1010qv@s.chibakoudai.jp">Takuya Ishizaki</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>os</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>SimpleHTTPServer</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>os</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>SimpleHTTPServer</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
